--- a/src/main/resources/templates/clientes/criar.html
+++ b/src/main/resources/templates/clientes/criar.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <header th:replace="~{cabecalho :: head('Cadastrar cliente')}"></header>
+
 <body>
-<nav th:replace="~{menu :: nav}"></nav>
+	<nav th:replace="~{menu :: nav}"></nav>
 	<div class="container mt-3">
 		<h2 class="text-center">Cadastrar clientes</h2>
 		<hr>
@@ -11,17 +11,15 @@
 			<div class="row">
 				<div class="col-md-6">
 					<div class="input-group mb-3 input-group-sm">
-						<span class="input-group-text">Nome</span> <input
-							th:errorclass="is-invalid" type="text" th:field="*{nome}"
-							class="form-control">
+						<span class="input-group-text">Nome</span> 
+						<input th:errorclass="is-invalid" type="text" th:field="*{nome}" class="form-control">
 						<div class="invalid-feedback" th:errors="*{nome}"></div>
 					</div>
 				</div>
 				<div class="col-md-6">
 					<div class="input-group mb-3 input-group-sm">
-						<span class="input-group-text">Documento</span> <input type="text"
-							th:errorclass="is-invalid" th:field="*{documento}"
-							class="form-control">
+						<span class="input-group-text">Documento</span> <input type="text" th:errorclass="is-invalid"
+							th:field="*{documento}" class="form-control">
 						<div class="invalid-feedback" th:errors="*{documento}"></div>
 					</div>
 				</div>
@@ -29,8 +27,8 @@
 			<div class="row">
 				<div class="col-md-6">
 					<div class="input-group mb-3 input-group-sm">
-						<span class="input-group-text">Endereço</span> <input type="text"
-							th:field="*{endereco}" class="form-control">
+						<span class="input-group-text">Endereço</span> <input type="text" th:field="*{endereco}"
+							class="form-control">
 					</div>
 				</div>
 			</div>
@@ -38,4 +36,5 @@
 		</form>
 	</div>
 </body>
+
 </html>
