--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org">
 
-<header th:replace="~{cabecalho :: head('Listar produtos')}"></header>
+<header th:replace="~{cabecalho :: head('Listar provas')}"></header>
 <body>
 	<nav th:replace="~{menu :: nav}"></nav>
 
