--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="/produtos">Produto</a>
+          <a class="nav-link" href="/provas">Produto</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/clientes">Cliente</a>
