--- a/src/main/resources/templates/produtos/index.html
+++ b/src/main/resources/templates/produtos/index.html
@@ -2,12 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org">
 
-<header th:replace="~{cabecalho :: head('Listar produtos')}"></header>
+<header th:replace="~{cabecalho :: head('Listar provas')}"></header>
 <body>
 <nav th:replace="~{menu :: nav}"></nav>
 	<div class="container mt-3">
-		<a type="button" class="btn btn-primary" href='/produtos/criar'>Criar</a>
-		<h3>Cadastro de produtos</h3>
+		<a type="button" class="btn btn-primary" href='/provas/criar'>Criar</a>
+		<h3>Cadastro de provas</h3>
 		<table id="tbProduto" class="table table-bordered table-sm">
 			<thead>
 				<tr>
@@ -18,12 +18,12 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr th:each="produto : ${listarProdutos}">
-					<td th:text="${produto.getNome()}">produto</td>
-					<td th:text="${produto.getQuantidade()}">quantidade</td>
-					<td th:text="${produto.getValor()}">Valor</td>
+				<tr th:each="prova : ${listarProdutos}">
+					<td th:text="${prova.getNome()}">prova</td>
+					<td th:text="${prova.getQuantidade()}">quantidade</td>
+					<td th:text="${prova.getValor()}">Valor</td>
 					<td>
-	 <a th:href="@{/produtos/{produtoId}(produtoId = ${produto.id})}" class="btn btn-info"> Detalhe</a>
+	 <a th:href="@{/provas/{provaId}(provaId = ${prova.id})}" class="btn btn-info"> Detalhe</a>
 					<a href="#" class="btn btn-warning"> Editar</a> <a
 						href="#" class="btn btn-danger"> Deletar</a>
 						</td>
