--- a/src/main/resources/templates/cadastro-login/cadastro-login.html
+++ b/src/main/resources/templates/cadastro-login/cadastro-login.html
@@ -1,81 +1,90 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<div class="form">
+<header th:replace="~{cabecalho :: head('Sign In')}"></header>
 
-  <ul class="tab-group">
-    <li class="tab active"><a href="#signup">Sign Up</a></li>
-    <li class="tab"><a href="#login">Log In</a></li>
-  </ul>
+<body>
+  <nav th:replace="~{menu :: nav}"></nav>
+  <div th:object="${cadastroLoginDto}" action="/cadastro-login" method="POST" class="form">
 
-  <div class="tab-content">
-    <div id="signup">
-      <h1>Sign Up for Free</h1>
+    <ul class="tab-group">
+      <li class="tab active"><a href="#signup">Sign Up</a></li>
+      <li class="tab"><a href="#login">Log In</a></li>
+    </ul>
 
-      <form action="/" method="post">
+    <div class="tab-content">
+      <div id="signup">
+        <h1>Sign Up for Free</h1>
 
-        <div class="top-row">
-          <div class="field-wrap">
-            <label>
-              First Name<span class="req">*</span>
-            </label>
-            <input type="text" required autocomplete="off" />
+        <form action="/" method="post">
+
+          <div class="top-row">
+            <div class="field-wrap">
+              <label>
+                First Name<span class="req">*</span>
+              </label>
+              <input th:errorclass="is-invalid" th:field="*{primeiroNome}" type="text" required autocomplete="off" />
+              <div class="invalid-feedback" th:errors="*{primeiroNome}"></div>
+            </div>
+
+            <div class="field-wrap">
+              <label>
+                Last Name<span class="req">*</span>
+              </label>
+              <input th:errorclass="is-invalid" th:field="*{segundoNome}" type="text" required autocomplete="off" />
+              <div class="invalid-feedback" th:errors="*{segundoNome}"></div>
+            </div>
           </div>
 
           <div class="field-wrap">
             <label>
-              Last Name<span class="req">*</span>
+              Email Address<span class="req">*</span>
             </label>
-            <input type="text" required autocomplete="off" />
+            <input th:errorclass="is-invalid" th:field="*{email}" type="email" required autocomplete="off" />
+            <div class="invalid-feedback" th:errors="*{email}"></div>
           </div>
-        </div>
 
-        <div class="field-wrap">
-          <label>
-            Email Address<span class="req">*</span>
-          </label>
-          <input type="email" required autocomplete="off" />
-        </div>
+          <div class="field-wrap">
+            <label>
+              Set A Password<span class="req">*</span>
+            </label>
+            <input th:errorclass="is-invalid" th:field="*{senha}" type="password" required autocomplete="off" />
+            <div class="invalid-feedback" th:errors="*{senha}"></div>
+          </div>
 
-        <div class="field-wrap">
-          <label>
-            Set A Password<span class="req">*</span>
-          </label>
-          <input type="password" required autocomplete="off" />
-        </div>
+          <button type="submit" class="button button-block" />Get Started</button>
 
-        <button type="submit" class="button button-block" />Get Started</button>
+        </form>
 
-      </form>
+      </div>
 
-    </div>
+      <div id="login">
+        <h1>Welcome Back!</h1>
 
-    <div id="login">
-      <h1>Welcome Back!</h1>
+        <form action="/" method="post">
 
-      <form action="/" method="post">
+          <div class="field-wrap">
+            <label>
+              Email Address<span class="req">*</span>
+            </label>
+            <input type="email" required autocomplete="off" />
+          </div>
 
-        <div class="field-wrap">
-          <label>
-            Email Address<span class="req">*</span>
-          </label>
-          <input type="email" required autocomplete="off" />
-        </div>
+          <div class="field-wrap">
+            <label>
+              Password<span class="req">*</span>
+            </label>
+            <input type="password" required autocomplete="off" />
+          </div>
 
-        <div class="field-wrap">
-          <label>
-            Password<span class="req">*</span>
-          </label>
-          <input type="password" required autocomplete="off" />
-        </div>
+          <p class="forgot"><a href="#">Forgot Password?</a></p>
 
-        <p class="forgot"><a href="#">Forgot Password?</a></p>
+          <button class="button button-block" />Log In</button>
 
-        <button class="button button-block" />Log In</button>
+        </form>
 
-      </form>
+      </div>
 
-    </div>
+    </div>]
 
   </div>]
-
-</div>]
+</body>
